src/objects/Test_Scripts__c.object
<CustomObject>
    <description>Custom Object to store all test scripts that need to be run</description>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Script_Prerequsite__c</fullName>
        <label>Script Prerequsite</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script_Description__c</fullName>
        <label>Test Script Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script_Purpose__c</fullName>
        <label>Test Script Purpose</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Script_Steps__c</fullName>
        <label>Test Script Steps</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>